package com.chrisjaunes.communication.client.contacts.model;

public class ContactsConfig {
    public static final String URL_CONTACTS_QUERY = "contacts/query";
    public static final String URL_CONTACTS_UPDATE = "contacts/update";
    public static final String URL_CONTACTS_QUERY_ACCOUNT = "contacts/query/account";
    public static final String STATUS_QUERY_SUCCESSFUL = "query successful";
    public static final String STATUS_UPDATE_SUCCESSFUL = "update successful";
    public static final int CONTACTS_FRIENDS_NULL_CODE = 0;
    public static final int CONTACTS_FRIENDS_AGREE_CODE = 1;
    public static final int CONTACTS_FRIENDS_REQUEST_CODE = 2;
    public static final String STR_CONTACTS_ACCOUNT = "account2";
    public static final String STR_TIME = "time";
    public static final String STR_OPERATION = "operation";
    public static final String CONTACTS_FRIEND_REQUEST = "request";
    public static final String CONTACTS_FRIENDS_AGREE = "agree";
    public static final String CONTACTS_FRIENDS_REJECT = "reject";
}
