package com.chrisjaunes.communication.client.contacts.model;

import com.chrisjaunes.communication.client.group.model.GMessage;
import com.chrisjaunes.communication.client.utils.UniApiResult;

import java.util.List;

import io.reactivex.Flowable;
import okhttp3.ResponseBody;
import retrofit2.Call;
import retrofit2.http.Field;
import retrofit2.http.FormUrlEncoded;
import retrofit2.http.POST;

public interface ContactsRetrofit {
    @FormUrlEncoded
    @POST("QueryGroupMessages")
    Flowable<UniApiResult<List<GMessage>>> queryMessage(@Field("groupId") String groupId, @Field("time") String time);

    @FormUrlEncoded
    @POST("AddGroupMessage")
    Flowable<UniApiResult<String>> addMessage(@Field("groupId") String groupId, @Field("time") String time, @Field("1") int type, @Field("content") String content);

    @FormUrlEncoded
    @POST(ContactsConfig.URL_CONTACTS_QUERY)
    Call<ResponseBody> query(@Field(ContactsConfig.STR_TIME) String time);

    @FormUrlEncoded
    @POST(ContactsConfig.URL_CONTACTS_UPDATE)
    Call<ResponseBody> update(@Field(ContactsConfig.STR_CONTACTS_ACCOUNT) String account,
                              @Field(ContactsConfig.STR_TIME) String time,
                              @Field(ContactsConfig.STR_OPERATION) String operation);

    @FormUrlEncoded
    @POST(ContactsConfig.URL_CONTACTS_QUERY_ACCOUNT)
    Call<ResponseBody> queryAccount(@Field(ContactsConfig.STR_CONTACTS_ACCOUNT) String account);
}
